# Web-Scraping

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  MOBILE.md  README-local-dev.md  README.md  _build-and-restart.bat  _build-only.bat  dev_all.sh  improve_jpx.py  jpx_collect_v2.py  jpx_excel_v3.py  jpx_ml_analysis.py  jpx_ml_v2.py  jpx_ml_v3.py  jpx_neuro_ranking.py  jpx_viz_gen.py  pyproject.toml  regen_dash.bat  regen_dash.vbs  run_pipeline.bat  run_pipeline.vbs  start-dashboard.bat  test_output.txt  update.bat
.claude/: active-team.md  settings.json
api/: index.py
backend/: .env.example  requirements.txt
config/: gemini.yaml  llm.yaml
docs/: brainstem.md  codex_workflow.md  data_ingestion.md  design.md  dividend_data_runbook.md  forecasting.md  gemini_budget.md  investment_mvp.md  market_data_runbook.md  orchestration.md  papertrade-design.md  rag.md  scoring.md  terminal_runbook.md
examples/: fetch_job.yaml  financials_sample.csv  funds.csv  investment_funds_sample.csv  investment_holdings_sample.csv  nikkei225_sources_sample.yaml  portfolio_dividends_sample.csv  portfolio_performance_sample.csv  source_registry_crawl_sample.yaml  source_registry_dividend_edinet.yaml  source_registry_dividend_ir.yaml  source_registry_edinet_sample.yaml  source_registry_nikkei225_edinet.yaml  source_registry_nikkei225_sample.yaml  sp500_monthly_sample.csv
ops/: morning-refresh.ps1  register-tasks.ps1  serve-app.ps1
scripts/: auto_scrape_scheduler.py  build-and-serve.ps1  build_daily_bars_slice.py  build_daily_bars_slice_local_evidence.py  build_data_gap_dashboard.py  (+21 more)
(+364 files in other folders)
