[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "investment-assistant"
version = "0.1.0"
description = "Codex-managed household automation and investment support foundation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
investment-assistant = "investment_assistant.cli:main"

[project.optional-dependencies]
gemini = [
    "google-genai>=1.0.0",
]
forecast = [
    "numpy>=1.26",
    "scikit-learn>=1.4",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not integration'"
markers = [
    "integration: exercises a real subprocess/network call; excluded from the default run",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["investment_assistant"]

